--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,18 @@ body{
     width:100%;
     height:70%;
 }
+
+.bb2{
+    width:10%;
+    height:50%;
+}
+
+.bb3{
+    width:10%;
+    height:55%;
+}
+
+.bb4{
+    width:10%;
+    height:58%;
+}
