--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body{
 }
 
 .bb1{
+    --building-color2:#66cc99;
     --building-color1:#999;
     width:10%;
     height:70%;
@@ -55,6 +56,7 @@ body{
 .bb2{
     width:10%;
     height:50%;
+    background-color: var(--building-color2,green);
 }
 
 .bb3{
