Created a --building-color3 variable set it to #cc6699 and applied it to bb3 with a fallback value of pink.

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@ body{
 .bb1{
     --building-color2:#66cc99;
     --building-color1:#999;
+    --building-color3:#cc6699;
     width:10%;
     height:70%;
     display:flex;
@@ -62,6 +63,7 @@ body{
 .bb3{
     width:10%;
     height:55%;
+    background-color:var(--building-color3,pink);
 }
 
 .bb4{
