--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+:root{
+    --building-color1: #aa80ff;
+    --building-color2: #66cc99;
+    --building-color3: #cc6699;
+}
+
 *{
     border:1px solid black;
     box-sizing:border-box;
@@ -19,9 +25,6 @@ body{
 }
 
 .bb1{
-    --building-color2:#66cc99;
-    --building-color1:#999;
-    --building-color3:#cc6699;
     width:10%;
     height:70%;
     display:flex;
