--- a/styles.css
+++ b/styles.css
@@ -79,8 +79,6 @@ body{
 .foreground-buildings{
     width:100%;
     height:100%;
-    position:absolute;
-    top:0;
     display:flex;
     align-items: flex-end;
     justify-content: space-evenly;
@@ -110,4 +108,9 @@ body{
 .fb6{
     width:9%;
     height:38%;
+}
+
+.foreground-buildings,.background-buildings{
+    position: absolute;
+    top: 0;
 }
