--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,6 @@ body{
     overflow: hidden;
 }
 
-.background-buildings{
-    width:100%;
-    height:100%;
-    display:flex;
-    align-items: flex-end;
-    justify-content: space-evenly;
-
-}
-
 .bb1{
     width:10%;
     height:70%;
@@ -76,9 +67,11 @@ body{
     background-color: var(--building-color4);
 }
 
-.foreground-buildings{
+.background-buildings,.foreground-buildings{
     width:100%;
     height:100%;
+    position:absolute;
+    top:0;
     display:flex;
     align-items: flex-end;
     justify-content: space-evenly;
@@ -108,9 +101,4 @@ body{
 .fb6{
     width:9%;
     height:38%;
-}
-
-.foreground-buildings,.background-buildings{
-    position: absolute;
-    top: 0;
 }
