Added comments on the code to help people to better understand it.

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body{
     overflow: hidden;
 }
 
+/* BACKGROUND BUILDINGS - "bb" stands for "background building" */
 .bb1{
     width:10%;
     height:70%;
@@ -77,6 +78,7 @@ body{
     justify-content: space-evenly;
 }
 
+/* FOREGROUND BUILDINGS - "fb" stands for "foreground building" */
 .fb1{
     width:10%;
     height:60%;
