--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,11 @@ body{
 
 .bb1a{
     background-color: var(--building-color1);
+    background:linear-gradient(var(--building-color1), 
+    var(--window-color1));
     width:70%;
     height:10%;
+    
 }
   
 .bb1b{
