--- a/styles.css
+++ b/styles.css
@@ -27,12 +27,17 @@ body{
 
 }
 
+.bb1a-window{
+    height:10%;
+    background:linear-gradient(var(--building-color1)
+    var(--window-color1));
+
+}
+
 .bb1a{
     background-color: var(--building-color1);
-    background:linear-gradient(var(--building-color1), 
-    var(--window-color1));
     width:70%;
-    height:10%;
+    
     
 }
   
