fixed .bb1-window background property

--- a/styles.css
+++ b/styles.css
@@ -29,8 +29,7 @@ body{
 
 .bb1-window{
     height:10%;
-    background:linear-gradient(var(--building-color1)
-    var(--window-color1));
+    background:linear-gradient(var(--building-color1),var(--window-color1));
 
 }
 
