--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ body{
     background-color: var(--building-color1);
     width:100%;
     height:70%;
+    background: linear-gradient(orange,var(--building-color1),var(--window-color1));
 }
 
 .bb2{
