--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     --building-color3: #cc6699;
     --building-color4:#538cc6;
     --window-color1:black;
-    --window-color:#8cd9b3;
+    --window-color2:#8cd9b3;
 }
 
 *{
