--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,13 @@ body{
     height:100%;
     background: repeating-linear-gradient(var(--building-color2) 0%,var(--building-color2) 6%,var(--window-color2) 6%,var(--window-color2) 9%);
 }
+
+.bb2a{
+    margin: auto;
+    width: 5vw;
+    height: 5vw;
+    border-top: 1vw solid #000;
+    border-bottom: 1vw solid #000;
+    border-left: 1vw solid #999;
+    border-right: 1vw solid #999;
+}
