Changed it from 5vw to 5vh.

--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ body{
 }
 
 .bb2a{
-    border-bottom: 5vw solid var(--building-color2);
+    border-bottom: 5vh solid var(--building-color2);
     border-left: 5vw solid transparent;
     border-right: 5vw solid transparent;
 }
