--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ body{
     overflow: hidden;
 }
 
+.building-wrap{
+    
+}
+
 /* BACKGROUND BUILDINGS - "bb" stands for "background building" */
 .bb1{
     width:10%;
