--- a/styles.css
+++ b/styles.css
@@ -175,3 +175,7 @@ body{
     align-items: center;
     justify-content: space-evenly;
 }
+
+.fb1a{
+    border-bottom: 7vh solid var(--building-color4);
+}
