--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,13 @@ fb2a{
     width:100%;
 }
 
-fb2b{
+.fb2b{
     width:100%;
     height:75%;
+}
+
+.fb2-window{
+    width:22%;
+    height:100%;
+    background-color: var(--building-color3);
 }
