For .fb2a, added a border-bottom of 10vh solid var(--building-color3), and a border-left and border-right of 1vw solid transparent.

--- a/styles.css
+++ b/styles.css
@@ -181,8 +181,11 @@ body{
     border-right: 2vw solid transparent;
 }
 
-fb2a{
+.fb2a{
     width:100%;
+    border-bottom: 10vh solid var(--building-color3);
+    border-left: 1vw solid transparent;
+    border-right: 1vw solid transparent;
 }
 
 .fb2b{
