--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,17 @@ body{
     height:45%;
     background-color:var(--building-color1);
 }
+
+.fb3a{
+    width:80%;
+    height:15%;
+}
+
+.fb3b{
+    width:100%;
+    height:35%;
+}
+
 .fb4{
     width:8%;
     height:45%;
