--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@ body{
 
 .building-wrap{
     display: flex;
-  flex-direction: column;
-  align-items: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* BACKGROUND BUILDINGS - "bb" stands for "background building" */
@@ -115,6 +115,12 @@ body{
 .fb3a{
     width:80%;
     height:15%;
+    background-color:var(--window-color1);
+}
+
+.fb3-window{
+    width:25%;
+    height:80%;
     background-color:var(--building-color1);
 }
 
