--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,9 @@ body{
     width: 100%;
     height:89%;
     background-color: var(--building-color1);
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .fb4-window{
