--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,7 @@ body{
     background-color:var(--building-color2);
     position:relative;
     right:10%;
+    background:repeating-linear-gradient(var(--building-color2) 0%,var(--building-color2) 5%,transparent 5%,transparent 10%);
 }
 .fb6{
     width:9%;
