--- a/styles.css
+++ b/styles.css
@@ -176,6 +176,7 @@ body{
     width:9%;
     height:38%;
     background-color:var(--building-color3);
+    background:repeating-linear-gradient(90deg,var(--building-color3),var(--building-color3) 10%,transparent 10%,transparent 30%);
 }
 
 .bb2b{
