--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,12 @@ body{
     width:9%;
     height:38%;
     background-color:var(--building-color3);
-    background:repeating-linear-gradient(90deg,var(--building-color3),var(--building-color3) 10%,transparent 10%,transparent 30%);
+    background:repeating-linear-gradient(90deg,var(--building-color3),var(--building-color3) 10%,transparent 10%,transparent 30%),repeating-linear-gradient(
+        var(--building-color3),
+        var(--building-color3) 10%,
+        var(--window-color3) 10%,
+        var(--window-color3) 30%
+      );
 }
 
 .bb2b{
