--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,10 @@ body{
     justify-content: space-evenly;
 }
 
+.sky{
+    background:radial-gradient(#ffcf33,#ffcf33 20%,#ffff66 21%,#bbeeff 100%);
+}
+
 /* FOREGROUND BUILDINGS - "fb" stands for "foreground building" */
 .fb1{
     width:10%;
