--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ body{
 }
 
 .sky{
-    background:radial-gradient(#ffcf33,#ffcf33 20%,#ffff66 21%,#bbeeff 100%);
+    background:radial-gradient(circle closest-corner at 15% 15%,#ffcf33,#ffcf33 20%,#ffff66 21%,#bbeeff 100%);
 }
 
 /* FOREGROUND BUILDINGS - "fb" stands for "foreground building" */
